Fixed some warnings
